fix user totals padding on mobile

--- a/src/app/user-search/user-search-totals/user-search-totals.component.sass
+++ b/src/app/user-search/user-search-totals/user-search-totals.component.sass
@@ -7,5 +7,5 @@
 
 @media screen and (max-width: 600px)
   .user-search-totals
-    padding-top: 35px
+    padding-top: 15px
     padding-bottom: 0
